--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Gitshare</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <style>
-      body{
+  <head>
+    <meta charset="utf-8" />
+    <title>Gitshare</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <style>
+      body {
         background-color: rgb(225, 232, 238);
       }
-  </style>
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    </style>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
